--- a/learning/src/main/resources/templates/error/404.html
+++ b/learning/src/main/resources/templates/error/404.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>404错误</h1>
-  <div th:text="${exception.message}">message</div>
+  <div th:unless="${#strings.isEmpty(exception)}" th:text="${exception.message}">message</div>
 </body>
 </html>
