--- a/myblog/src/main/resources/templates/superadmin.html
+++ b/myblog/src/main/resources/templates/superadmin.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>程序猿张先森 | 后台管理</title>
     <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta name="referrer" content="no-referrer" /><!--页面头部添加，使用了别人的防盗机制的资源信息需要加上这句-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
 
