--- a/myblog/src/main/resources/templates/superadmin.html
+++ b/myblog/src/main/resources/templates/superadmin.html
@@ -100,6 +100,7 @@
                 <li class="superAdminClick expressInfo" style="width: 100%"><a><span class="am-icon-pencil-square-o"></span> 快递查询入口</a></li>
                 <li class="superAdminClick excelInfo" style="width: 100%"><a><span class="am-icon-pencil-square-o"></span> excel入口</a></li>
                 <li class="superAdminClick carInfo" style="width: 100%"><a><span class="am-icon-pencil-square-o"></span> 车辆品牌信息入口</a></li>
+                <li class="superAdminClick chatInfo" style="width: 100%"><a><span class="am-icon-pencil-square-o"></span> 在线聊天入口</a></li>
             </ul>
 
             <div class="am-panel am-panel-default admin-sidebar-panel">
@@ -296,6 +297,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="superFunction" id="chatInfo">
+                <div class="subject">
+                    <h4>socket聊天信息</h4>
                 </div>
             </div>
         </div>
