--- a/myblog/src/main/resources/templates/socket.html
+++ b/myblog/src/main/resources/templates/socket.html
@@ -11,7 +11,7 @@
 <body>
     <input type="hidden" id="cid" th:value="${cid}"/>
     <p>
-        账号<input type="text" id="from"  style="width: 150px; border: 1px solid red;" />
+        <input type="text" id="from" hidden="hidden"  style="width: 150px; border: 1px solid red;" th:value="${cid}" />
         昵称<input type="text" id="nickname"  style="width: 150px; border: 1px solid red;" />
         <div class="chatContainer">
             <ul id="chatZone"></ul>
